# genui-agent

./: .gitignore  README.md
agent/: .env.example  pyproject.toml
agent/src/: agent.py  app.py  main.py
webui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.playground.config.ts  vitest.config.ts
webui/playground/: App.tsx  index.html
webui/src/: index.ts
webui/src/bridge/: hostRegistry.ts  useGenuiBridge.ts
webui/src/components/cards/: CardChrome.module.css  CardChrome.tsx
webui/src/components/chat/: Composer.tsx  GenUIChat.tsx  Launcher.tsx  MessageList.tsx  MessageTurn.tsx  StatusBar.tsx  TextBubble.tsx  ToolChip.tsx  Welcome.tsx  chat.module.css  scenes.ts
webui/src/components/host/: ComponentHost.module.css  ComponentHost.tsx
webui/src/components/registry/: Chart.tsx  Form.tsx  Map.tsx  Metric.tsx  Table.tsx  builtins.ts  components.module.css
webui/src/components/surfaces/: GenUICanvas.tsx  GenUIDock.module.css  GenUIDock.tsx  InlineSurface.module.css  InlineSurface.tsx
webui/src/components/surfaces/canvas/: CanvasBoard.tsx  CanvasCard.tsx  canvas.module.css  layout.ts
webui/src/hooks/: useGenUI.ts  useGenUIActions.ts
webui/src/lib/: autoheight.ts  ids.ts
webui/src/provider/: GenUIProvider.tsx  context.ts
webui/src/store/: createStore.test.ts  createStore.ts
webui/src/theme/: theme.ts  tokens.css
webui/src/transport/: run.ts  sse.test.ts  sse.ts  useAgentRun.ts  useConfig.ts
webui/src/types/: agui.ts  genui.ts  public.ts  state.ts
