[project]
name = "genui-agent"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "fasta2a>=0.6.1",
    "fastapi>=0.136.3",
    "pydantic-ai[ag-ui]>=1.106.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
dev = "src.main:run"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
module-name = "src"

[dependency-groups]
dev = ["ruff", "ty"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.terminal]
error-on-warning = true
